compiler/test/conformance/testdata/errors/25_annotation_no_interpolation.yz
name : "world"

`greeting: "hello ${name}"`
Server: {}

main: {
    print("ok")
}
